--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@effect-ts/core": "^0.20.5",
     "@types/node": "^14.14.31"
   },
   "devDependencies": {
@@ -27,6 +26,5 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   },
-  "peerDependencies": {
-  }
+  "peerDependencies": {}
 }
