--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^14.14.31"
+    "@types/node": "^14.14.31",
+    "nanoid": "^3.1.20"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.15.2",
